<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo"
    tools:context=".ActivityMenu"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="64dp">

    <TextView
        android:id="@+id/tv_montania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/tv_montania"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_montania" />

    <ImageButton
        android:id="@+id/imb_montania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ruta"
        app:srcCompat="@drawable/montania" />

    <ImageButton
        android:id="@+id/imb_volcan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toStartOf="@+id/imb_montania"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ruta"
        app:srcCompat="@drawable/volcan" />

    <TextView
        android:id="@+id/tv_volcan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_volcan"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_montania"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_volcan" />

    <TextView
        android:id="@+id/tv_mirador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_mirador"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_mirador" />

    <ImageButton
        android:id="@+id/imb_mirador"
        android:layout_width="94dp"
        android:layout_height="91dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ruta"
        app:srcCompat="@drawable/mirador" />

    <TextView
        android:id="@+id/tv_catedral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_catedral"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_catedral" />

    <TextView
        android:id="@+id/tv_arqueologico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/tv_arqueologico"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_arqueologico" />

    <ImageButton
        android:id="@+id/imb_arqueologico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playa3"
        app:srcCompat="@drawable/arqueologico" />

    <TextView
        android:id="@+id/tv_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_ruta"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_arqueologico"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/tv_catedral"
        app:layout_constraintTop_toBottomOf="@+id/imb_ruta" />

    <ImageButton
        android:id="@+id/imb_ruta"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toStartOf="@+id/imb_arqueologico"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imb_catedral"
        app:layout_constraintTop_toBottomOf="@+id/tv_playa"
        app:srcCompat="@drawable/ruta" />

    <TextView
        android:id="@+id/tv_playa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/tv_lago"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_lago" />

    <ImageButton
        android:id="@+id/imb_playa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/playa" />

    <ImageButton
        android:id="@+id/imb_catedral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_balneario"
        app:srcCompat="@drawable/catedral" />

    <ImageButton
        android:id="@+id/imb_balneario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toStartOf="@+id/imb_lago"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playa"
        app:srcCompat="@drawable/parque_acuatico" />

    <ImageButton
        android:id="@+id/imb_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/imb_retroceder"
        android:onClick="retroceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/imb_lago"
        android:layout_width="88dp"
        android:layout_height="87dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/round_btn"
        android:contentDescription="@string/imb_descripcion"
        android:onClick="accederLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playa"
        app:srcCompat="@drawable/lago" />

    <TextView
        android:id="@+id/tv_playa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_playa"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_playa" />

    <TextView
        android:id="@+id/tv_balneario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_balneario"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_playa3"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imb_balneario" />

    <Button
        android:id="@+id/btn_agregar_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_rounded_border"
        android:gravity="center"
        android:onClick="agregandodatos"
        android:text="@string/btn_agregar_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirador"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>