<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_newLugarForm"
    android:background="@color/azul_fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_imagen"
                android:layout_width="122dp"
                android:layout_height="126dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_imagen"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="101dp"
                android:layout_marginLeft="101dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="..."
                android:textColor="@color/design_default_color_surface"
                android:textColorHint="@color/design_default_color_surface"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_titulo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#007aff"
                android:ems="10"
                android:hint="@string/txt_nameL"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_municipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#007aff"
                android:ems="10"
                android:hint="@string/txt_municipioL"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_departamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_municipio"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#007aff"
                android:ems="10"
                android:hint="@string/txt_departamentoL"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/txt_departamento"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#007aff"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txt_descripcionL"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_GurdarL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_descripcion"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_rounded"

                android:onClick="Guardar"
                android:text="@string/btn_guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.06" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>